<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gima.aroundyou.ui.FilterEventActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabFilter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tabCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtFood"
                        android:text="@string/category_food"
                        android:checked="true" />

                    <Switch
                        android:text="@string/category_shopping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtShopping"
                        android:checked="true" />

                    <Switch
                        android:text="@string/category_electronics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtElectronics"
                        android:checked="true" />

                    <Switch
                        android:text="@string/category_property"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtProperty"
                        android:checked="true" />

                    <Switch
                        android:text="@string/category_Entertainment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtEntertainment"
                        android:checked="true" />

                    <Switch
                        android:text="@string/category_incident"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/swtIncident"
                        android:checked="true" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:text="@android:string/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/category_cancel_btn"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button" />

                        <Button
                            android:text="@string/button_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/category_filter_btn"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_category"
                            android:id="@+id/txtFilterCategory" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_title"
                            android:id="@+id/txtFilterTitle" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/additional_tags"
                            android:id="@+id/txtAdditionalTags"
                            android:imeOptions="actionGo" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <Button
                            android:text="@android:string/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/search_cancel_btn"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button"/>

                        <Button
                            android:text="@string/button_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/search_filter_btn"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.Button"/>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
