<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_description"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gima.aroundyou.AddDescriptionActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:id="@+id/txtEventTitle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:maxLines="4"
                android:hint="@string/event_desc"
                android:id="@+id/txtEventDesc" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <Button
                android:text="@string/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEventDescBack"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button" />

            <Button
                android:text="@string/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEventDescNext"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button" />
        </LinearLayout>

</LinearLayout>
