<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gima.aroundyou.ui.AddCategoryActivity"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/category_linearlayout">

        <TextView
            android:text="@string/event_category"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <Spinner
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategory"
            android:entries="@array/spinnerItems"
            android:prompt="@string/event_category"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center_vertical|start"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_linearlayout"
        android:padding="5dp"
        android:id="@+id/tags_linearlayout">

        <TextView
            android:text="@string/additional_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/txtAddTag" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttons_linearlayout">

        <Button
            android:text="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEventCategoryBack"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:text="@string/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEventCategoryNext"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tags_linearlayout"
        android:id="@+id/addTag_linearlayout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:text="@string/add_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCategoryAddTag"
            android:layout_weight="1" />
    </LinearLayout>

    <co.lujun.androidtagview.TagContainerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:container_enable_drag="false"
        app:horizontal_interval="10dp"
        app:vertical_interval="10dp"
        app:container_background_color="#80FFFFFF"
        app:tag_clickable="true"
        app:tag_theme="random"
        android:layout_below="@+id/addTag_linearlayout"
        android:id="@+id/tag_panel"
        android:layout_above="@+id/buttons_linearlayout" />

</RelativeLayout>
